[gd_scene load_steps=13 format=3 uid="uid://c8kyecgu6fbm7"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_pvf02"]
[ext_resource type="PackedScene" uid="uid://c0xl3d74ji0ge" path="res://CardSystem/scenario_text.tscn" id="2_43ynp"]
[ext_resource type="PackedScene" uid="uid://ryvwjkrn8hjm" path="res://Game/background.tscn" id="2_fjdek"]
[ext_resource type="PackedScene" uid="uid://b852gf4qy1jgd" path="res://CardSystem/card_system.tscn" id="3_m7eef"]
[ext_resource type="PackedScene" uid="uid://dttsohq4v7oup" path="res://Game/dock.tscn" id="3_s0qux"]
[ext_resource type="Texture2D" uid="uid://lnw5lmtrfk15" path="res://Art/Button_Exit.png" id="4_83syu"]
[ext_resource type="Script" path="res://Game/ui_layer.gd" id="4_4153l"]
[ext_resource type="PackedScene" uid="uid://dvhhue32262p6" path="res://Resources/resource_container.tscn" id="4_resource"]
[ext_resource type="PackedScene" uid="uid://bl8fve1bsmn8a" path="res://Manager/fsm.tscn" id="5_ykfvr"]
[ext_resource type="AudioStream" uid="uid://bpncc7ayaros0" path="res://Sounds/button_click_sfx.wav" id="9_click"]
[ext_resource type="Script" path="res://Game/sound_toggle.gd" id="9_sound"]
[ext_resource type="Texture2D" uid="uid://cdbcspm2n13ed" path="res://Art/Button_Retry.png" id="10_retry"]

[node name="Game" type="Node2D"]
script = ExtResource("1_pvf02")

[node name="Background" parent="." instance=ExtResource("2_fjdek")]

[node name="Dock" parent="." instance=ExtResource("3_s0qux")]

[node name="UILayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_4153l")

[node name="ExitButton" type="TextureButton" parent="UILayer"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 200.0
offset_bottom = 200.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_83syu")
ignore_texture_size = true
stretch_mode = 5

[node name="SoundToggle" type="TextureButton" parent="UILayer"]
layout_mode = 0
offset_left = 219.0
offset_top = 19.0
offset_right = 400.0
offset_bottom = 200.0
focus_mode = 0
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("9_sound")

[node name="click_sfx" type="AudioStreamPlayer" parent="UILayer/SoundToggle"]
stream = ExtResource("9_click")

[node name="exit_click_sfx" type="AudioStreamPlayer" parent="UILayer"]
stream = ExtResource("9_click")

[node name="RetryButton" type="TextureButton" parent="UILayer"]
layout_mode = 0
offset_left = 1702.0
offset_top = 34.0
offset_right = 1877.0
offset_bottom = 209.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_retry")
ignore_texture_size = true
stretch_mode = 5

[node name="Fsm" parent="." instance=ExtResource("5_ykfvr")]

[node name="ResourceContainer" parent="." instance=ExtResource("4_resource")]
position = Vector2(27, 58)

[node name="ScenarioText" parent="." instance=ExtResource("2_43ynp")]
position = Vector2(-30, 120)

[node name="CardSystem" parent="." instance=ExtResource("3_m7eef")]
position = Vector2(11, 152)
